crates/lang-parse/tests/snapshots/lexer__lexer_plain string.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..14,
        value: LiteralString(
            "plain string",
        ),
    },
]
