crates/lang-parse/tests/snapshots/lexer__lexer_simple float.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..3,
        value: LiteralFloat(
            "1.1",
        ),
    },
]
